# desktop

./: CLAUDE.md  README.md
linux/: README.md
macos/: README.md
windows/: Cargo.toml  README.md
windows/src/: main.rs
