[package]
name = "beebeeb-desktop-windows"
version = "0.1.0"
edition = "2024"
description = "Beebeeb desktop sync daemon for Windows"
publish = false

[dependencies]
beebeeb-sync = { git = "https://github.com/beebeeb-io/core", package = "beebeeb-sync" }
beebeeb-core = { git = "https://github.com/beebeeb-io/core", package = "beebeeb-core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
